lib/tests/fixtures/compiler/evaluation/plus_bad_right_string.pp
notice(1 + 'foo')
